--- a/Moonlight-SpatialSDK/app/src/main/res/values/ids.xml
+++ b/Moonlight-SpatialSDK/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
   <item type="id" name="ui_example" />
   <item type="id" name="options_panel" />
+  <item type="id" name="connection_panel" />
 </resources>
